examples/test/testpolicy19408.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19408
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key5: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value4
          key11: value34
      podSelector:
        matchLabels:
          key8: value21
          key26: value49
